HT-86: Add finish ride body schema
